Fix percentage alignment PM-204

--- a/src/components/FormBarChartRadioButton/formBarChartRadioButton.less
+++ b/src/components/FormBarChartRadioButton/formBarChartRadioButton.less
@@ -11,8 +11,17 @@
   }
 
   .formBarChartRadioButton {
-    display: flex;
     margin-bottom: 5px;
+
+    &__wrapper {
+      display: flex;
+      margin-bottom: 5px;
+    }
+
+    .outcome {
+      display: block;
+      margin-bottom: 10px;
+    }
 
     &__text {
       width: 100%;
